# berrfs

./: Cargo.toml  README.md  flake.nix  pack.nix  pyproject.toml
bergsf/: Cargo.toml
bergsf/python/bergsf/: __init__.py  __main__.py
bergsf/src/: lib.rs
python/bergsf/: __init__.py  __main__.py  etete.py  example.py
python/berrfs/: __init__.py  __main__.py  example.py
src/: berpf_detections.rs  gaussian_clutter.rs  lib.rs  pyberpf_detections.rs  uniform_clutter.rs  utils.rs
src/gsf/: mod.rs
src/gsf/pybindings/: gaussian_clutter.rs  mod.rs  uniform_clutter.rs
src/pf/: intensities.rs  mod.rs
src/pf/detections/: mod.rs  pybindings.rs
src/pf/intensities/: mod.rs  pybindings.rs
