[package]
name = "bergsf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bergsf"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
numpy = "*"
faer = "*"
faer-ext = "*"
statrs = "*"
nalgebra = "*"
itertools = "*"
num-traits = "*"
rand = "*"
