[package]
name = "bergsf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bergsf"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
numpy = "*"
faer = "*"
faer-ext = "*"
statrs = "*"
nalgebra = "*"
itertools = "*"
num_traits = "*"

